# free-chr-hs

./: .gitignore  .gitlab-ci.yml  README.md  stack.yaml
free-chr/: LICENSE  README.md  free-chr.cabal  package.yaml
free-chr/examples/CHR/Examples/FiniteDomain/: EnumConstraints.hs  WaveFunctionCollaps.hs  WaveFunctionCollapse.hs
free-chr/examples/CHR/Examples/FiniteDomain/WaveFunctionCollapse/: Generator.hs  Instances.hs  Tile.hs
free-chr/examples/CHR/Examples/Generic/: FiniteDomain.hs  GCD.hs  Identity.hs  List.hs  Writer.hs
free-chr/src/: CHR.hs
free-chr/src/CHR/: FiniteDomain.hs  Helpers.hs
free-chr/src/CHR/ConstraintSystem/RationalTree/: Default.hs  Generic.hs
free-chr/src/CHR/Execution/: Generic.hs
free-chr/src/CHR/Execution/Generic/: Helpers.hs  Simple.hs
free-chr/src/CHR/FiniteDomain/: Constraints.hs  Default.hs  Helpers.hs  Solver.hs  State.hs
free-chr/src/CHR/Generic/: Default.hs  Helpers.hs  Solver.hs
free-chr/src/CHR/RationalTree/: Term.hs
free-chr/src/CHR/RationalTree/Term/: Class.hs
free-chr/test/: Spec.hs
free-chr/test/CHR/: FiniteDomainSpec.hs  GenericSpec.hs
free-chr/test/CHR/Execution/: GenericSpec.hs
