name:                free-chr
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/free-chr#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    CHR,
    CHR.ConstraintSystem.RationalTree.Default,
    CHR.ConstraintSystem.RationalTree.Generic,
    CHR.Execution.Generic
  build-depends:       base, containers, lens, mtl
  default-language:    Haskell2010
  extensions:          TypeFamilies, FlexibleContexts

-- source-repository head
  -- type:     git
  -- location: https://github.com/githubuser/free-chr
